# bench

./: .gitignore  .travis.yml  LICENSE  README.md  bench.cabal  criterion.nix  default.nix  release.nix  shell.nix  stack.yaml
nix/: bench.nix
src/: Main.hs
